codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__unified_mention_popup_falls_back_from_bound_plugin_on_right.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5348
expression: terminal.backend()
---
"                                                                                                    "
"› @left  @bound                                                                                     "
"                                                                                                    "
"  Mentions                                                                                          "
"  Files, directories, plugins, skills and tasks                                                     "
"   All Results   Filesystem Only   Plugins                                                          "
"  left                                                                                              "
"› left  Plugin used to test bound mention fallback.                                           Plugin"
"  enter/tab insert · esc close · ↑/↓ select · ←/→ filter                                            "
