codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__unified_mention_popup_targets_unbound_plugin_right_of_adjacent_bound_plugin.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› @sample@other                                                                                     "
"                                                                                                    "
"> other  Plugin used to test adjacent mention targeting.                                      Plugin"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  enter insert · esc close · ←/→ switch search modes     [All Results]   Filesystem Only    Plugins "
